// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Restaurants reducer FETCH_FAVORITED_RESTAURANTS.SUCCESS works as expected 1`] = `
Object {
  "favoritedItemIds": Array [
    "some_id_1",
    "some_id_2",
  ],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": true,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer FETCH_FAVORITED_RESTAURANTS.SUCCESS works as expected when empty array 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": true,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer QUERY_AREA.ERROR works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer QUERY_AREA.PENDING works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": true,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer QUERY_AREA.SUCCESS works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": Array [
    Object {
      "coordinates": Array [
        -122.408999,
        37.7902566,
      ],
      "id": "ChIJkVLoONZ_j4ARx2vJ4umERnI",
      "name": "Uncle Vito's Pizza",
      "photoUrl": "test-file-stub",
      "placeUrl": "https://www.google.com/maps/search/?api=1&query=Uncle%20Vito's%20Pizza&query_place_id=ChIJkVLoONZ_j4ARx2vJ4umERnI",
      "priceLevel": 1,
      "rating": 4.3,
      "supportingText": "restaurant",
      "userRatingsTotal": 1427,
    },
    Object {
      "coordinates": Array [
        -122.408675,
        37.7900735,
      ],
      "id": "ChIJg7cNIYyAhYAR8D4ml1oItTg",
      "name": "Roxanne's Cafe",
      "photoUrl": "test-file-stub",
      "placeUrl": "https://www.google.com/maps/search/?api=1&query=Roxanne's%20Cafe&query_place_id=ChIJg7cNIYyAhYAR8D4ml1oItTg",
      "priceLevel": 2,
      "rating": 4.2,
      "supportingText": "restaurant",
      "userRatingsTotal": 1219,
    },
    Object {
      "coordinates": Array [
        -122.4073542,
        37.7902509,
      ],
      "id": "ChIJaa9OAYyAhYARxwgUHLNEpOY",
      "name": "Bouche",
      "photoUrl": "test-file-stub",
      "placeUrl": "https://www.google.com/maps/search/?api=1&query=Bouche&query_place_id=ChIJaa9OAYyAhYARxwgUHLNEpOY",
      "priceLevel": 3,
      "rating": 4.5,
      "supportingText": "bar",
      "userRatingsTotal": 465,
    },
    Object {
      "coordinates": Array [
        -122.409088,
        37.7902449,
      ],
      "id": "ChIJvXXIOoyAhYARe-ixq3WdmrY",
      "name": "Sons & Daughters",
      "photoUrl": "test-file-stub",
      "placeUrl": "https://www.google.com/maps/search/?api=1&query=Sons%20%26%20Daughters&query_place_id=ChIJvXXIOoyAhYARe-ixq3WdmrY",
      "priceLevel": 4,
      "rating": 4.6,
      "supportingText": "restaurant",
      "userRatingsTotal": 249,
    },
  ],
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer SET_FILTER_OPTION works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": "high_to_low",
}
`;

exports[`Restaurants reducer SET_HIGHLIGHTED_RESTAURANT_ID works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": "some_id",
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer UPDATE_FAVORITED_RESTAURANTS.ERROR works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": true,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer UPDATE_FAVORITED_RESTAURANTS.PENDING works as expected 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": true,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer UPDATE_FAVORITED_RESTAURANTS.SUCCESS works as expected 1`] = `
Object {
  "favoritedItemIds": Array [
    "some_id_1",
    "some_id_2",
  ],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer UPDATE_FAVORITED_RESTAURANTS.SUCCESS works as expected when empty array 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;

exports[`Restaurants reducer returns the initial state 1`] = `
Object {
  "favoritedItemIds": Array [],
  "highlightedRestaurantId": null,
  "isLoading": false,
  "isUpdatingFavorites": false,
  "restaurants": null,
  "selectedFilterOption": null,
}
`;
